--- a/core/pom.xml
+++ b/core/pom.xml
@@ -25,12 +25,12 @@
     <parent>
         <groupId>io.undertow</groupId>
         <artifactId>undertow-parent</artifactId>
-        <version>1.3.22.Final</version>
+        <version>1.3.22.SP1-SNAPSHOT</version>
     </parent>
 
     <groupId>io.undertow</groupId>
     <artifactId>undertow-core</artifactId>
-    <version>1.3.22.Final</version>
+    <version>1.3.22.SP1-SNAPSHOT</version>
 
     <name>Undertow Core</name>
 
